--- a/exercises/lesson-10/Lists/src/Lists/appsettings.json
+++ b/exercises/lesson-10/Lists/src/Lists/appsettings.json
@@ -5,5 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "ServerUrl": "http://localhost:5341"
+        }
+      }
+    ]
+  }
 }
